Attempt to fix the font size on mobile browsers.

--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 body
 {
-    font-size:250%;
+    font-size:200%;
     font-family:Verdana, Geneva, sans-serif;
     background-color:LightSteelBlue;
 }
 
 input
 {
-    font-size:150%;
+    font-size:100%;
     font-family:Verdana, Geneva, sans-serif;
 }
 
